<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp"
    tools:context=".SignUpActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:boxCornerRadiusBottomEnd="16sp"
        app:boxCornerRadiusBottomStart="16sp"
        app:boxCornerRadiusTopEnd="16sp"
        app:boxCornerRadiusTopStart="16sp"
        android:hint="@string/user_name"
        android:id="@+id/userNameLayout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameET"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:boxCornerRadiusBottomEnd="16sp"
        app:boxCornerRadiusBottomStart="16sp"
        app:boxCornerRadiusTopEnd="16sp"
        app:boxCornerRadiusTopStart="16sp"
        android:hint="@string/email"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:id="@+id/mailIdLayout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mailIdEt"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:boxCornerRadiusBottomEnd="16sp"
        app:boxCornerRadiusBottomStart="16sp"
        app:boxCornerRadiusTopEnd="16sp"
        app:boxCornerRadiusTopStart="16sp"
        android:hint="@string/password"
        android:id="@+id/passwordLayout"
        app:passwordToggleEnabled="true"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordET"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:boxCornerRadiusBottomEnd="16sp"
        app:boxCornerRadiusBottomStart="16sp"
        app:boxCornerRadiusTopEnd="16sp"
        app:boxCornerRadiusTopStart="16sp"
        android:hint="@string/confirm_password"
        android:layout_marginTop="10sp"
        android:id="@+id/confirmPasswordLayout"
        app:passwordToggleEnabled="true"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordET"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/signup"
        android:id="@+id/signUp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/already_have_account"
        android:textColor="?attr/colorPrimary"
        android:id="@+id/loginLink"
        android:textSize="16sp"/>

</LinearLayout>